# reservoirs_capacity_nn

./: .gitignore  README.md  index.html  pyproject.toml
models/: dam_model_final_log_mse.pth  dam_model_final_mape.pth  dam_model_final_mse.pth  dam_model_log_mse.pth  dam_model_loocv_baells_log_mse.pth  dam_model_loocv_baells_mape.pth  dam_model_loocv_boadella_log_mse.pth  dam_model_loocv_boadella_mape.pth  dam_model_loocv_foix_log_mse.pth  dam_model_loocv_foix_mape.pth  dam_model_loocv_llosa de cavall_log_mse.pth  dam_model_loocv_llosa de cavall_mape.pth  dam_model_loocv_riudecanyes_log_mse.pth  dam_model_loocv_riudecanyes_mape.pth  dam_model_loocv_sant ponç_log_mse.pth  dam_model_loocv_sant ponç_mape.pth  dam_model_loocv_sau_log_mse.pth  dam_model_loocv_sau_mape.pth  dam_model_loocv_siurana_log_mse.pth  dam_model_loocv_siurana_mape.pth  dam_model_loocv_susqueda_log_mse.pth  dam_model_loocv_susqueda_mape.pth  dam_model_mape.pth  dam_model_mse.pth
narr/: methodology.md  narrative.md  structure.md
output/tables/: ensemble_log_mse_predictions_escales.csv  ensemble_log_mse_predictions_terradets.csv  ensemble_mape_predictions_escales.csv  ensemble_mape_predictions_terradets.csv
src/: cnn.ipynb  cnn_loocv.ipynb  get_labels.ipynb  get_sentinel-2.ipynb  get_terradets_sentinel-2.ipynb  inference.ipynb  plots.ipynb  prediction_ensemble.ipynb
